test-data/unit/check-high-level.test
[case eqAllowed]
from egglog import *
_ = i64(0) == i64(0)

[case notEqAllowed]
from egglog import *
_ = i64(0) != i64(0)

[case eqToAllowed]
from egglog import *
_ = eq(i64(0)).to(i64(0))

[case eqToNotAllowed]
from egglog import *
_ = eq(i64(0)).to(Unit()) # E: Argument 1 to "to" of "_EqBuilder" has incompatible type "Unit"; expected "i64"
